# temporary_file_handler

./: CMakeDeps.cmake  CMakeLists.txt  LICENSE.md  README.md
cmake/: cmake_uninstall.cmake.in  temporary_file_handlerConfig.cmake.in
include/temporary_file_handler/: temporary_file_handler.hpp
src/: temporary_file_handler.cpp
test/: CMakeLists.txt  tfh_test.cpp
